--- a/sass/components/index/_modal.scss
+++ b/sass/components/index/_modal.scss
@@ -1,40 +1,74 @@
 .backdrop {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    transition: opacity 300ms linear, visibility 300ms linear;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 300ms linear, visibility 300ms linear;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 40px;
+  min-width: 528px;
+  min-height: 581px;
+  background-color: var(--primary-white-color);
+  transform: translate(-50%, -50%) scale(1);
+  transition: var(--transition-duration) var(--cubic-bezier);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  &__title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    color: var(--primary-main-color);
+    margin-bottom: 12px;
   }
-  
-  .modal {
+
+  &__container {
+    margin-bottom: 10px;
+  }
+
+  &__label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    margin-bottom: 4px;
+  }
+
+  &__input {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-top: 4px;
+  }
+
+  &__icon {
     position: absolute;
     top: 50%;
-    left: 50%;
-    padding: 40px 40px;
-    padding-left: 40px;
-    padding-right: 40px;
-    min-width: 528px;
-    min-height: 581px;
-    background-color:var(--primary-white-color);
-    transform: translate(-50%, -50%) scale(1);
-    transition: var(--transition-duration) var(--cubic-bezier);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+    left: 15px;
+    transform: translateY(-50%);
+    fill: var(--secondary-text-color);
+    transition: fill var(--transition-duration) var(--cubic-bezier);
   }
-  
-  .is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-  } 
-  
-  .backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(0);
-  }
-  
-  .modal-close__button {
+}
+.modal-close {
+  &__button {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -50,39 +84,14 @@
     transition: color var(--transition-duration) var(--cubic-bezier);
     cursor: pointer;
   }
-  
-  .modal-close__icon {
+
+  &__icon {
     fill: currentColor;
   }
-  
-  .modal__title {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    color: var(--primary-main-color);
-    margin-bottom: 12px;
-  }
-  
-  .modal__container {
-    margin-bottom: 10px;
-  }
-  
-  .modal__label {
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-    margin-bottom: 4px;
-  }
-  
-  .modal__input {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    margin-top: 4px;
-  }
-  
-  .modal-input__form {
+}
+
+.modal-input {
+  &__form {
     padding: 11px 15px 11px 42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -93,32 +102,8 @@
     transition: border-color var(--transition-duration) var(--cubic-bezier);
     outline: none;
   }
-  
-  .modal-input__form:focus,
-  .modal-input__text:focus {
-    border-color: var(--accent-color);
-  }
-  
-  .modal__icon {
-    position: absolute;
-    top: 50%;
-    left: 15px;
-    transform: translateY(-50%);
-    fill: var(--secondary-text-color);
-    transition: fill var(--transition-duration) var(--cubic-bezier);
-  }
-  
-  .modal__container:focus-within .modal__icon {
-    fill: var(--accent-color);
-  }
-  
-  .modal-comment__container {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-  }
-  
-  .modal-input__text {
+
+  &__text {
     resize: none;
     height: 120px;
     padding: 12px 16px;
@@ -131,37 +116,49 @@
     outline: none;
     transition: border-color var(--transition-duration) var(--cubic-bezier);
   }
-  
-  .modal-input__text::placeholder {
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
-  }
-  
-  .checkbox__container {
-    margin-bottom: 30px;
-  }
-  
-  .check {
-    padding-left: 1em;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    text-align: center;
-  
-    color: var(--primary-text-color)
-  }
-  
-  .checkbox__input {
+}
+
+.modal-input__form:focus,
+.modal-input__text:focus {
+  border-color: var(--accent-color);
+}
+
+.modal__container:focus-within .modal__icon {
+  fill: var(--accent-color);
+}
+
+.modal-comment__container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.check {
+  padding-left: 1em;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--primary-text-color);
+}
+
+.checkbox__input:checked + .checkbox__icon {
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+  background-image: url(../images/check.svg);
+  background-repeat: no-repeat;
+}
+
+.checkbox {
+  &__input {
     appearance: none;
     -webkit-appearance: none;
-    -moz-appearance:none;
+    -moz-appearance: none;
   }
-  
-  .checkbox__icon {
+
+  &__icon {
     display: inline-block;
     margin-right: 7px;
     width: 16px;
@@ -169,40 +166,37 @@
     border-radius: 2px;
     border: 2px solid black;
   }
-  
-  .checkbox__input:checked + .checkbox__icon {
-    background-color: var(--accent-color);
-    border-color: var(--accent-color);
-    background-image: url(../images/check.svg);
-    background-repeat: no-repeat;
-  }
-  
-  .checkbox__policy {
+
+  &__policy {
     color: var(--accent-color);
     text-decoration: underline;
     margin-left: 5px;
   }
-  
-  .modal-submit__button {
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    text-align: center;
-    border-color: transparent;
-    border-radius: 4px;
-    display: block;
-    margin: 0 auto;
-    padding: 10px 52px;
-    letter-spacing: 0.06em;
-    color: var(--primary-white-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    transition: background-color var(--transition-duration) var(--cubic-bezier);
-    cursor: pointer;
+
+  &__container {
+    margin-bottom: 30px;
   }
-  
-  .modal-submit__button:hover,
-  .modal-submit__button:focus {
-    background-color: var(--accent-secondary-color);
-  }
+}
+
+.modal-submit__button {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  border-color: transparent;
+  border-radius: 4px;
+  display: block;
+  margin: 0 auto;
+  padding: 10px 52px;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color var(--transition-duration) var(--cubic-bezier);
+  cursor: pointer;
+    &:hover,
+    &:focus {
+      background-color: var(--accent-secondary-color);
+    }
+}
