--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -4,7 +4,9 @@
 @import './base/_common';
 @import './base/_reset';
 
-@import './components/_page-header';
+@import './layouts/_page-header';
+@import './layouts/_page-footer';
+
 @import './components/portfolio/portfolio-hero';
 @import './components/portfolio/portfolio-projects';
-@import './components/_page-footer';
+
