--- a/sass/components/index/_our-team.scss
+++ b/sass/components/index/_our-team.scss
@@ -17,6 +17,7 @@
     display: flex;
     gap: 30px;
   }
+
   &__container {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -24,7 +25,9 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    background-color: var(--primary-white-color);
   }
+
   &__title {
     margin-bottom: 10px;
     font-weight: 500;
@@ -33,12 +36,14 @@
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
   }
+
   &__text {
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
     margin-bottom: 16px;
   }
+
   &__list {
     display: flex;
     align-items: center;
@@ -46,6 +51,7 @@
     height: 100%;
     gap: 10px;
   }
+
   &__link {
     position: relative;
     display: flex;
