--- a/css/main.css
+++ b/css/main.css
@@ -552,6 +552,10 @@ span.page-footer__logo--accent {
   color: var(--primary-text-color);
 }
 
+.checkbox__input:focus + .checkbox__icon {
+  border: 2px solid var(--accent-color);
+}
+
 .checkbox__input:checked + .checkbox__icon {
   background-color: var(--accent-color);
   border-color: var(--accent-color);
